--- a/index.html
+++ b/index.html
@@ -50,56 +50,72 @@
                     <div class="imagen-port">
                         <img src="img/code.jpg" alt="">
                         <div class="hover-galeria">
+                        <a href="signin.html">
                             <img src="img/code-simbol.png" alt="">
+                        </a>
                             <p></p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/code.jpg" alt="">
                         <div class="hover-galeria">
+                        <a href="">
                             <img src="img/code-simbol.png" alt="">
+                        </a>
                             <p></p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/code.jpg" alt="">
                         <div class="hover-galeria">
+                        <a href="">
                             <img src="img/code-simbol.png" alt="">
+                        </a>
                             <p></p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/code.jpg" alt="">
                         <div class="hover-galeria">
+                        <a href="">
                             <img src="img/code-simbol.png" alt="">
+                        </a>
                             <p></p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/code.jpg" alt="">
                         <div class="hover-galeria">
+                        <a href="">
                             <img src="img/code-simbol.png" alt="">
+                        </a>
                             <p></p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/code.jpg" alt="">
                         <div class="hover-galeria">
+                        <a href="">
                             <img src="img/code-simbol.png" alt="">
+                        </a>
                             <p></p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/code.jpg" alt="">
                         <div class="hover-galeria">
+                        <a href="">
                             <img src="img/code-simbol.png" alt="">
+                        </a>
                             <p></p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/code.jpg" alt="">
                         <div class="hover-galeria">
+                        <a href="">
                             <img src="img/code-simbol.png" alt="">
+                        </a>
                             <p></p>
                         </div>
                     </div>
@@ -130,17 +146,23 @@
                 <h2 class="titulo">Nuestros servicios</h2>
                 <div class="servicio-cont">
                     <div class="servicio-ind">
+                    <a href="https://www.w3.org/standards/webdesign/htmlcss">
                         <img src="img/HTML.png" alt="">
+                    </a>
                         <h3>HTML</h3>
                         <p>Lenguaje de programación tan facil que te lo puedes aprender en tres dias viendote tutoriales de sudamericanos con internet tercermundista.</p>
                     </div>
                     <div class="servicio-ind">
+                    <a href="https://www.w3.org/standards/webdesign/htmlcss">
                         <img src="img/CSS.png" alt="">
+                    </a>
                         <h3>CSS</h3>
                         <p>Esta guapo porque con esto puedes cambiar el tamaño de las letras, el color, la fuente, y además es muy intuitivo, es como la AK-47, pero falla menos.</p>
                     </div>
                     <div class="servicio-ind">
+                    <a href="https://www.python.org">
                         <img src="img/Python1.png" alt="">
+                    </a>
                         <h3>Python</h3>
                         <p>Aqui la cosa ya se complica un poco, pero bueno, como somos unos maquinas hemos aprendido lo suficiente como para hacer scripts funcionales.</p>
                     </div>
