--- a/signin.html
+++ b/signin.html
@@ -33,9 +33,11 @@
             <input id="login-sign-up" type="checkbox" class="login__input--checkbox" />
             Recordarme
         </label>
-        <button class="login__submit" disabled>Iniciar Sesión</button>
+        <a href="index.html">
+            <button class="login__submit" disabled>Iniciar Sesión</button>
+        </a>
     </form>
-    <a href="index.html" class="login__forgot">Olvidaste tu contraseña?</a>
+    <a href="" class="login__forgot">Olvidaste tu contraseña?</a>
 </div>
     
 
